--- a/app/css/style.css
+++ b/app/css/style.css
@@ -7,3 +7,14 @@
 @import "additional-styles/theme.css";
 
 @import "tailwindcss/utilities";
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap');
+
+html, body {
+    font-family: 'Lexend', ;
+}
+
+/* Add a universal selector to ensure Lexend is used everywhere */
+* {
+    font-family: inherit;
+}
+  
